--- a/Fiqi.html
+++ b/Fiqi.html
@@ -23,19 +23,19 @@
             <p>الفقه الشافعي</p>
             <ul class="Fiqi">
                 <li>
-                    <img src="images/shujac.jpeg" alt="متن الغاية والتقريب">
+                    <img src="/Images/shujac.jpeg" alt="متن الغاية والتقريب">
                     <span>متن الغاية والتقريب</span>
                 </li>
                 <li>
-                    <img src="images/qarib.jpg" alt="فتح القريب المجيب">
+                    <img src="/Images/qarib.jpg" alt="فتح القريب المجيب">
                     <span>فتح القريب المجيب</span>
                 </li>
                 <li>
-                    <img src="images/salik.jpeg" alt="عمدة السالك">
+                    <img src="/Images/salik.jpeg" alt="عمدة السالك">
                     <span>عمدة السالك</span>
                 </li>
                 <li>
-                    <img src="images/minhaj.jpeg" alt="منهاج الطالبين">
+                    <img src="/Images/minhaj.jpeg" alt="منهاج الطالبين">
                     <span>منهاج الطالبين</span>
                 </li>
             </ul>
@@ -50,4 +50,3 @@
 </body>
 
 </html>
-
